fix action mobile positioning

--- a/src/styles/navigation/Actions.module.scss
+++ b/src/styles/navigation/Actions.module.scss
@@ -11,8 +11,8 @@
   right: 15px;
 
   @media screen and (max-width: $breakpoint-small) {
-    bottom: 5px;
-    right: 5px;
+    bottom: 10px;
+    right: 10px;
   }
 }
 
